--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,4 +24,18 @@
     <string name="followers_not_found">no followers</string>
     <string name="following_not_found">has not followed</string>
     <string name="title_activity_splash_screen">SplashScreenActivity</string>
+    <string name="user_favorite_menu">Favorite User</string>
+    <string name="title_activity_favuser">Favorite User</string>
+
+    <string name="favorite_delete">Deleted from favorite</string>
+    <string name="favorite_add">Added to favorite</string>
+
+    <string name="notification_settings">Notification Settings</string>
+
+    <string name="is_reminder">Daily Reminder</string>
+    <string name="key_reminder">reminder</string>
+
+    <string name="daily_notif">Find new favorite user in Github now!</string>
+    <string name="splashscreen_title">Mobile</string>
+    <string name="copyright_splashscreen">By Bagas P.I</string>
 </resources>
